--- a/envs/edger_DE.yaml
+++ b/envs/edger_DE.yaml
@@ -4,110 +4,110 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - bioconductor-annotate=1.66.0
-  - bioconductor-annotationdbi=1.50.0
-  - bioconductor-aroma.light=3.18.0
-  - bioconductor-biobase=2.48.0
-  - bioconductor-biocfilecache=1.12.0
-  - bioconductor-biocgenerics=0.34.0
-  - bioconductor-biocparallel=1.22.0
-  - bioconductor-biomart=2.44.0
-  - bioconductor-biostrings=2.56.0
-  - bioconductor-delayedarray=0.14.0
-  - bioconductor-deseq=1.39.0
-  - bioconductor-edaseq=2.22.0
-  - bioconductor-edger=3.30.0
-  - bioconductor-genefilter=1.70.0
-  - bioconductor-geneplotter=1.66.0
-  - bioconductor-genomeinfodb=1.24.0
-  - bioconductor-genomeinfodbdata=1.2.4
-  - bioconductor-genomicalignments=1.24.0
-  - bioconductor-genomicfeatures=1.40.0
-  - bioconductor-genomicranges=1.40.0
-  - bioconductor-iranges=2.22.1
-  - bioconductor-limma=3.44.1
-  - bioconductor-rhtslib=1.20.0
-  - bioconductor-rsamtools=2.4.0
-  - bioconductor-rtracklayer=1.48.0
-  - bioconductor-ruvseq=1.22.0
-  - bioconductor-s4vectors=0.26.0
-  - bioconductor-shortread=1.46.0
-  - bioconductor-summarizedexperiment=1.18.1
-  - bioconductor-xvector=0.28.0
-  - bioconductor-zlibbioc=1.34.0
-  - r-askpass=1.1
-  - r-assertthat=0.2.1
-  - r-backports=1.2.1
-  - r-base=4.0.2
-  - r-bh=1.75.0_0
-  - r-biocmanager=1.30.10
-  - r-bit=4.0.4
+  - bioconductor-annotate =1.66.0
+  - bioconductor-annotationdbi =1.50.0
+  - bioconductor-aroma.light =3.18.0
+  - bioconductor-biobase =2.48.0
+  - bioconductor-biocfilecache =1.12.0
+  - bioconductor-biocgenerics =0.34.0
+  - bioconductor-biocparallel =1.22.0
+  - bioconductor-biomart =2.44.0
+  - bioconductor-biostrings =2.56.0
+  - bioconductor-delayedarray =0.14.0
+  - bioconductor-deseq =1.39.0
+  - bioconductor-edaseq =2.22.0
+  - bioconductor-edger =3.30.0
+  - bioconductor-genefilter =1.70.0
+  - bioconductor-geneplotter =1.66.0
+  - bioconductor-genomeinfodb =1.24.0
+  - bioconductor-genomeinfodbdata =1.2.4
+  - bioconductor-genomicalignments =1.24.0
+  - bioconductor-genomicfeatures =1.40.0
+  - bioconductor-genomicranges =1.40.0
+  - bioconductor-iranges =2.22.1
+  - bioconductor-limma =3.44.1
+  - bioconductor-rhtslib =1.20.0
+  - bioconductor-rsamtools =2.4.0
+  - bioconductor-rtracklayer =1.48.0
+  - bioconductor-ruvseq =1.22.0
+  - bioconductor-s4vectors =0.26.0
+  - bioconductor-shortread =1.46.0
+  - bioconductor-summarizedexperiment =1.18.1
+  - bioconductor-xvector =0.28.0
+  - bioconductor-zlibbioc =1.34.0
+  - r-askpass =1.1
+  - r-assertthat =0.2.1
+  - r-backports =1.2.1
+  - r-base =4.0.2
+  - r-bh =1.75.0_0
+  - r-biocmanager =1.30.10
+  - r-bit =4.0.4
   - r-bit64=4.0.5
-  - r-bitops=1.0_6
-  - r-blob=1.2.1
-  - r-cachem=1.0.4
-  - r-cli=2.3.1
-  - r-crayon=1.4.1
-  - r-curl=4.3
-  - r-dbi=1.1.1
-  - r-dbplyr=2.1.0
-  - r-digest=0.6.27
-  - r-dplyr=1.0.5
-  - r-ellipsis=0.3.1
-  - r-fansi=0.4.2
-  - r-fastmap=1.1.0
-  - r-formatr=1.8
-  - r-futile.logger=1.4.3
-  - r-futile.options=1.0.1
-  - r-generics=0.1.0
-  - r-glue=1.4.2
-  - r-hms=1.0.0
-  - r-httr=1.4.2
-  - r-hwriter=1.3.2
-  - r-jpeg=0.1_8.1
-  - r-jsonlite=1.7.2
-  - r-lambda.r=1.2.4
-  - r-lattice=0.20_41
-  - r-latticeextra=0.6_29
-  - r-lifecycle=1.0.0
-  - r-locfit=1.5_9.4
-  - r-magrittr=2.0.1
-  - r-mass=7.3_53.1
-  - r-matrix=1.3_2
-  - r-matrixstats=0.58.0
-  - r-memoise=2.0.0
-  - r-mime=0.10
-  - r-openssl=1.4.3
-  - r-pillar=1.5.1
-  - r-pkgconfig=2.0.3
-  - r-plogr=0.2.0
-  - r-png=0.1_7
-  - r-prettyunits=1.1.1
-  - r-progress=1.2.2
-  - r-purrr=0.3.4
+  - r-bitops =1.0_6
+  - r-blob =1.2.1
+  - r-cachem =1.0.4
+  - r-cli =2.3.1
+  - r-crayon =1.4.1
+  - r-curl =4.3
+  - r-dbi =1.1.1
+  - r-dbplyr =2.1.0
+  - r-digest =0.6.27
+  - r-dplyr =1.0.5
+  - r-ellipsis =0.3.1
+  - r-fansi =0.4.2
+  - r-fastmap =1.1.0
+  - r-formatr =1.8
+  - r-futile.logger =1.4.3
+  - r-futile.options =1.0.1
+  - r-generics =0.1.0
+  - r-glue =1.4.2
+  - r-hms =1.0.0
+  - r-httr =1.4.2
+  - r-hwriter =1.3.2
+  - r-jpeg =0.1_8.1
+  - r-jsonlite =1.7.2
+  - r-lambda.r =1.2.4
+  - r-lattice =0.20_41
+  - r-latticeextra =0.6_29
+  - r-lifecycle =1.0.0
+  - r-locfit =1.5_9.4
+  - r-magrittr =2.0.1
+  - r-mass =7.3_53.1
+  - r-matrix =1.3_2
+  - r-matrixstats =0.58.0
+  - r-memoise =2.0.0
+  - r-mime =0.10
+  - r-openssl =1.4.3
+  - r-pillar =1.5.1
+  - r-pkgconfig =2.0.3
+  - r-plogr =0.2.0
+  - r-png =0.1_7
+  - r-prettyunits =1.1.1
+  - r-progress =1.2.2
+  - r-purrr =0.3.4
   - r-r.methodss3=1.8.1
-  - r-r.oo=1.24.0
-  - r-r.utils=2.10.1
+  - r-r.oo =1.24.0
+  - r-r.utils =2.10.1
   - r-r6=2.5.0
-  - r-rappdirs=0.3.3
-  - r-rcolorbrewer=1.1_2
-  - r-rcpp=1.0.6
-  - r-rcurl=1.98_1.3
-  - r-rlang=0.4.10
-  - r-rsqlite=2.2.4
-  - r-snow=0.4_3
-  - r-statmod=1.4.35
-  - r-stringi=1.5.3
-  - r-stringr=1.4.0
-  - r-survival=3.2_10
-  - r-sys=3.4
-  - r-tibble=3.1.0
-  - r-tidyselect=1.1.0
+  - r-rappdirs =0.3.3
+  - r-rcolorbrewer =1.1_2
+  - r-rcpp =1.0.6
+  - r-rcurl =1.98_1.3
+  - r-rlang =0.4.10
+  - r-rsqlite =2.2.4
+  - r-snow =0.4_3
+  - r-statmod =1.4.35
+  - r-stringi =1.5.3
+  - r-stringr =1.4.0
+  - r-survival =3.2_10
+  - r-sys =3.4
+  - r-tibble =3.1.0
+  - r-tidyselect =1.1.0
   - r-utf8=1.2.1
-  - r-vctrs=0.3.6
-  - r-withr=2.4.1
-  - r-xml=3.99_0.6
-  - r-xtable=1.8_4
-  - r-zeallot=0.1.0
-  - readline=8.2
-  - sed=4.8
+  - r-vctrs =0.3.6
+  - r-withr =2.4.1
+  - r-xml =3.99_0.6
+  - r-xtable =1.8_4
+  - r-zeallot =0.1.0
+  - readline =8.2
+  - sed =4.8
