--- a/envs/hisat2.yaml
+++ b/envs/hisat2.yaml
@@ -6,7 +6,8 @@ channels:
   - r
 dependencies:
   - hisat2=2.2.1
-  - samtools=1.16.1
-  - pigz=2.6
-  - pysam=0.20.0
-  - rename=1.601
+  - samtools =1.16.1
+  - pigz =2.6
+  - pysam =0.19.1
+  - python =3.9
+  - rename =1.601
