--- a/envs/bedtools.yaml
+++ b/envs/bedtools.yaml
@@ -1,13 +1,14 @@
-name: nextbed
+name: bedtools
 channels:
   - conda-forge
   - bioconda
   - defaults
   - r
 dependencies:
-  - bedtools=2.30.0
-  - curl=7.71.1
-  - grep=3.4
-  - pigz=2.6
-  - pysam=0.20.0
-  - samtools=1.16.1
+  - bedtools =2.30.0
+  - curl =7.87.0
+  - grep =3.4
+  - pigz =2.6
+  - pysam =0.20.0
+  - python =3.10.9
+  - samtools =1.16.1
