--- a/envs/dexseq_DEU.yaml
+++ b/envs/dexseq_DEU.yaml
@@ -3,145 +3,141 @@ channels:
   - bioconda
   - conda-forge
   - defaults
+  - r
 dependencies:
-  - bcftools=1.8
-  - bioconductor-annotate=1.64.0
-  - bioconductor-annotationdbi=1.48.0
-  - bioconductor-biobase=2.46.0
-  - bioconductor-biocfilecache=1.10.0
-  - bioconductor-biocgenerics=0.32.0
-  - bioconductor-biocparallel=1.20.0
-  - bioconductor-biomart=2.42.0
-  - bioconductor-biostrings=2.54.0
-  - bioconductor-delayedarray=0.12.0
-  - bioconductor-deseq2=1.26.0
-  - bioconductor-dexseq=1.32.0
-  - bioconductor-genefilter=1.68.0
-  - bioconductor-geneplotter=1.64.0
-  - bioconductor-genomeinfodb=1.22.0
-  - bioconductor-genomeinfodbdata=1.2.2
-  - bioconductor-genomicalignments=1.22.0
-  - bioconductor-genomicranges=1.38.0
-  - bioconductor-iranges=2.20.0
-  - bioconductor-rhtslib=1.18.0
-  - bioconductor-rsamtools=2.2.0
-  - bioconductor-rtracklayer=1.46.0
-  - bioconductor-s4vectors=0.24.0
-  - bioconductor-summarizedexperiment=1.16.0
-  - bioconductor-xvector=0.26.0
-  - bioconductor-zlibbioc=1.32.0
-  - bwidget=1.9.14
+  - bcftools =1.16
+  - bioconductor-annotate=1.76.0
+  - bioconductor-annotationdbi=1.60.0
+  - bioconductor-biobase=2.58.0
+  - bioconductor-biocfilecache=2.6.0
+  - bioconductor-biocgenerics=0.44.0
+  - bioconductor-biocio=1.8.0
+  - bioconductor-biocparallel=1.32.5
+  - bioconductor-biomart=2.54.0
+  - bioconductor-biostrings=2.66.0
+  - bioconductor-data-packages=20221112
+  - bioconductor-delayedarray=0.24.0
+  - bioconductor-deseq2=1.38.0
+  - bioconductor-dexseq=1.44.0
+  - bioconductor-genefilter=1.80.0
+  - bioconductor-geneplotter=1.76.0
+  - bioconductor-genomeinfodb=1.34.1
+  - bioconductor-genomeinfodbdata=1.2.9
+  - bioconductor-genomicalignments=1.34.0
+  - bioconductor-genomicranges=1.50.0
+  - bioconductor-iranges=2.32.0
+  - bioconductor-keggrest=1.38.0
+  - bioconductor-matrixgenerics=1.10.0
+  - bioconductor-rhtslib=2.0.0
+  - bioconductor-rsamtools=2.14.0
+  - bioconductor-rtracklayer=1.58.0
+  - bioconductor-s4vectors=0.36.0
+  - bioconductor-summarizedexperiment=1.28.0
+  - bioconductor-xvector=0.38.0
+  - bioconductor-zlibbioc=1.44.0
+  - bwidget =1.9.14
   - bzip2=1.0.8
-  - htseq=0.11.3
-  - htslib=1.7
-  - matplotlib=3.1.2
-  - matplotlib-base=3.1.2
-  - numpy=1.17.3
-  - pysam=0.14.1
-  - python-dateutil=2.8.1
-  - r-acepack=1.4.1
+  - htseq =2.0.2
+  - htslib =1.16
+  - matplotlib=3.6.3
+  - matplotlib-base=3.6.3
+  - numpy =1.24.1
+  - pysam =0.20.0
+  - python =3.10.8
+  - python-dateutil =2.8.2
+  - pyyaml=6.0
   - r-askpass=1.1
   - r-assertthat=0.2.1
-  - r-backports=1.1.5
-  - r-base=3.6.2
-  - r-base64enc=0.1_3
-  - r-bh=1.72.0_3
-  - r-bit=1.1_15.2
-  - r-bit64=0.9_7.1
-  - r-bitops=1.0_6
-  - r-blob=1.2.0
-  - r-checkmate=1.9.4
-  - r-cli=2.0.1
-  - r-cluster=2.1.0
-  - r-colorspace=1.4_1
-  - r-crayon=1.3.4
-  - r-curl=4.3
-  - r-data.table=1.12.8
-  - r-dbi=1.1.0
-  - r-dbplyr=1.4.2
-  - r-digest=0.6.23
-  - r-dplyr=0.8.3
-  - r-ellipsis=0.3.0
-  - r-evaluate=0.14
-  - r-fansi=0.4.1
-  - r-farver=2.0.2
-  - r-foreign=0.8_74
-  - r-formatr=1.7
-  - r-formula=1.2_3
+  - r-base=4.2.2
+  - r-bh=1.78.0_0
+  - r-bit=4.0.5
+  - r-bit64=4.0.5
+  - r-bitops=1.0_7
+  - r-blob=1.2.3
+  - r-cachem=1.0.6
+  - r-cli=3.6.0
+  - r-codetools=0.2_18
+  - r-colorspace=2.0_3
+  - r-commonmark=1.8.1
+  - r-cpp11=0.4.3
+  - r-crayon=1.5.2
+  - r-curl=4.3.3
+  - r-dbi=1.1.3
+  - r-dbplyr=2.2.1
+  - r-digest=0.6.31
+  - r-dplyr=1.0.10
+  - r-ellipsis=0.3.2
+  - r-evaluate=0.19
+  - r-fansi=1.0.3
+  - r-farver=2.1.1
+  - r-fastmap=1.1.0
+  - r-filelock=1.0.2
+  - r-formatr=1.13
   - r-futile.logger=1.4.3
   - r-futile.options=1.0.1
-  - r-ggplot2=3.2.1
-  - r-glue=1.3.1
-  - r-gridextra=2.3
-  - r-gtable=0.3.0
-  - r-highr=0.8
-  - r-hmisc=4.3_0
-  - r-hms=0.5.3
-  - r-htmltable=1.13.3
-  - r-htmltools=0.4.0
-  - r-htmlwidgets=1.5.1
-  - r-httr=1.4.1
-  - r-hwriter=1.3.2
-  - r-jpeg=0.1_8.1
-  - r-jsonlite=1.6.1
-  - r-knitr=1.26
-  - r-labeling=0.3
+  - r-generics=0.1.3
+  - r-ggplot2=3.4.0
+  - r-glue=1.6.2
+  - r-gtable=0.3.1
+  - r-highr=0.10
+  - r-hms=1.1.2
+  - r-httr=1.4.4
+  - r-hwriter=1.3.2.1
+  - r-isoband=0.2.7
+  - r-jsonlite=1.8.4
+  - r-knitr=1.41
+  - r-labeling=0.4.2
   - r-lambda.r=1.2.4
-  - r-lattice=0.20_38
-  - r-latticeextra=0.6_29
-  - r-lazyeval=0.2.2
-  - r-lifecycle=0.1.0
-  - r-locfit=1.5_9.1
-  - r-magrittr=1.5
-  - r-markdown=1.1
-  - r-mass=7.3_51.5
-  - r-matrix=1.2_18
-  - r-matrixstats=0.55.0
-  - r-memoise=1.1.0
-  - r-mgcv=1.8_31
-  - r-mime=0.8
+  - r-lattice=0.20_45
+  - r-lifecycle=1.0.3
+  - r-locfit=1.5_9.7
+  - r-magrittr=2.0.3
+  - r-markdown=1.4
+  - r-mass=7.3_58.1
+  - r-matrix=1.5_3
+  - r-matrixstats=0.63.0
+  - r-memoise=2.0.1
+  - r-mgcv=1.8_41
+  - r-mime=0.12
   - r-munsell=0.5.0
-  - r-nlme=3.1_143
-  - r-nnet=7.3_12
-  - r-openssl=1.4.1
-  - r-pillar=1.4.3
+  - r-nlme=3.1_161
+  - r-openssl=2.0.5
+  - r-pillar=1.8.1
   - r-pkgconfig=2.0.3
   - r-plogr=0.2.0
-  - r-plyr=1.8.5
-  - r-png=0.1_7
-  - r-prettyunits=1.1.0
+  - r-plyr=1.8.8
+  - r-png=0.1_8
+  - r-prettyunits=1.1.1
   - r-progress=1.2.2
-  - r-purrr=0.3.3
-  - r-r6=2.4.1
-  - r-rappdirs=0.3.1
-  - r-rcolorbrewer=1.1_2
-  - r-rcpp=1.0.3
-  - r-rcpparmadillo=0.9.800.3.0
-  - r-rcurl=1.95_4.13
-  - r-reshape2=1.4.3
-  - r-rlang=0.4.2
-  - r-rpart=4.1_15
-  - r-rsqlite=2.1.5
-  - r-rstudioapi=0.10
-  - r-scales=1.1.0
-  - r-snow=0.4_3
-  - r-statmod=1.4.33
-  - r-stringi=1.4.5
-  - r-stringr=1.4.0
-  - r-survival=3.1_8
-  - r-sys=3.3
-  - r-tibble=2.1.3
-  - r-tidyselect=0.2.5
-  - r-utf8=1.1.4
-  - r-vctrs=0.2.1
-  - r-viridis=0.5.1
-  - r-viridislite=0.3.0
-  - r-withr=2.1.2
-  - r-xfun=0.12
-  - r-xml=3.98_1.20
+  - r-purrr=1.0.1
+  - r-r6=2.5.1
+  - r-rappdirs=0.3.3
+  - r-rcolorbrewer=1.1_3
+  - r-rcpp=1.0.9
+  - r-rcpparmadillo=0.11.4.3.1
+  - r-rcurl=1.98_1.9
+  - r-restfulr=0.0.15
+  - r-rjson=0.2.21
+  - r-rlang=1.0.6
+  - r-rsqlite=2.2.20
+  - r-scales=1.2.1
+  - r-snow=0.4_4
+  - r-statmod=1.5.0
+  - r-stringi=1.7.12
+  - r-stringr=1.5.0
+  - r-survival=3.5_0
+  - r-sys=3.4.1
+  - r-tibble=3.1.8
+  - r-tidyselect=1.2.0
+  - r-utf8=1.2.2
+  - r-vctrs=0.5.1
+  - r-viridislite=0.4.1
+  - r-withr=2.5.0
+  - r-xfun=0.36
+  - r-xml=3.99_0.13
+  - r-xml2=1.3.3
   - r-xtable=1.8_4
-  - r-yaml=2.2.0
-  - r-zeallot=0.1.0
+  - r-yaml=2.3.6
   - readline=8.2
-  - samtools=1.6
-  - sed=4.7
+  - samtools=1.16.1
+  - sed=4.8
