--- a/envs/dexseq_DTU.yaml
+++ b/envs/dexseq_DTU.yaml
@@ -4,133 +4,133 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - bioconductor-annotate=1.68.0
-  - bioconductor-annotationdbi=1.52.0
-  - bioconductor-biobase=2.50.0
-  - bioconductor-biocfilecache=1.14.0
-  - bioconductor-biocgenerics=0.36.0
-  - bioconductor-biocparallel=1.24.0
-  - bioconductor-biomart=2.46.0
-  - bioconductor-biostrings=2.58.0
-  - bioconductor-delayedarray=0.16.0
+  - bioconductor-annotate =1.68.0
+  - bioconductor-annotationdbi =1.52.0
+  - bioconductor-biobase =2.50.0
+  - bioconductor-biocfilecache =1.14.0
+  - bioconductor-biocgenerics =0.36.0
+  - bioconductor-biocparallel =1.24.0
+  - bioconductor-biomart =2.46.0
+  - bioconductor-biostrings =2.58.0
+  - bioconductor-delayedarray =0.16.0
   - bioconductor-deseq2=1.30.0
-  - bioconductor-dexseq=1.36.0
-  - bioconductor-drimseq=1.18.0
-  - bioconductor-edger=3.32.0
-  - bioconductor-genefilter=1.72.0
-  - bioconductor-geneplotter=1.68.0
-  - bioconductor-genomeinfodb=1.26.0
-  - bioconductor-genomeinfodbdata=1.2.4
-  - bioconductor-genomicalignments=1.26.0
-  - bioconductor-genomicfeatures=1.42.0
-  - bioconductor-genomicranges=1.42.0
-  - bioconductor-iranges=2.24.0
-  - bioconductor-limma=3.46.0
-  - bioconductor-matrixgenerics=1.2.0
-  - bioconductor-rhtslib=1.22.0
-  - bioconductor-rsamtools=2.6.0
-  - bioconductor-rtracklayer=1.50.0
-  - bioconductor-s4vectors=0.28.0
-  - bioconductor-summarizedexperiment=1.20.0
-  - bioconductor-tximport=1.18.0
-  - bioconductor-xvector=0.30.0
-  - bioconductor-zlibbioc=1.36.0
-  - r-askpass=1.1
-  - r-assertthat=0.2.1
-  - r-backports=1.2.1
-  - r-base=4.0.2
-  - r-bh=1.75.0_0
-  - r-bit=4.0.4
+  - bioconductor-dexseq =1.36.0
+  - bioconductor-drimseq =1.18.0
+  - bioconductor-edger =3.32.0
+  - bioconductor-genefilter =1.72.0
+  - bioconductor-geneplotter =1.68.0
+  - bioconductor-genomeinfodb =1.26.0
+  - bioconductor-genomeinfodbdata =1.2.4
+  - bioconductor-genomicalignments =1.26.0
+  - bioconductor-genomicfeatures =1.42.0
+  - bioconductor-genomicranges =1.42.0
+  - bioconductor-iranges =2.24.0
+  - bioconductor-limma =3.46.0
+  - bioconductor-matrixgenerics =1.2.0
+  - bioconductor-rhtslib =1.22.0
+  - bioconductor-rsamtools =2.6.0
+  - bioconductor-rtracklayer =1.50.0
+  - bioconductor-s4vectors =0.28.0
+  - bioconductor-summarizedexperiment =1.20.0
+  - bioconductor-tximport =1.18.0
+  - bioconductor-xvector =0.30.0
+  - bioconductor-zlibbioc =1.36.0
+  - r-askpass =1.1
+  - r-assertthat =0.2.1
+  - r-backports =1.2.1
+  - r-base =4.0.2
+  - r-bh =1.75.0_0
+  - r-bit =4.0.4
   - r-bit64=4.0.5
-  - r-bitops=1.0_6
-  - r-blob=1.2.1
-  - r-brio=1.1.1
-  - r-cachem=1.0.4
-  - r-callr=3.5.1
-  - r-cli=2.3.0
-  - r-colorspace=2.0_0
-  - r-crayon=1.4.1
-  - r-curl=4.3
-  - r-dbi=1.1.1
-  - r-dbplyr=2.1.0
-  - r-desc=1.2.0
-  - r-diffobj=0.3.3
-  - r-digest=0.6.27
-  - r-dplyr=1.0.4
-  - r-ellipsis=0.3.1
-  - r-evaluate=0.14
-  - r-fansi=0.4.2
-  - r-farver=2.0.3
-  - r-fastmap=1.1.0
-  - r-formatr=1.7
-  - r-futile.logger=1.4.3
-  - r-futile.options=1.0.1
-  - r-generics=0.1.0
+  - r-bitops =1.0_6
+  - r-blob =1.2.1
+  - r-brio =1.1.1
+  - r-cachem =1.0.4
+  - r-callr =3.5.1
+  - r-cli =2.3.0
+  - r-colorspace =2.0_0
+  - r-crayon =1.4.1
+  - r-curl =4.3
+  - r-dbi =1.1.1
+  - r-dbplyr =2.1.0
+  - r-desc =1.2.0
+  - r-diffobj =0.3.3
+  - r-digest =0.6.27
+  - r-dplyr =1.0.4
+  - r-ellipsis =0.3.1
+  - r-evaluate =0.14
+  - r-fansi =0.4.2
+  - r-farver =2.0.3
+  - r-fastmap =1.1.0
+  - r-formatr =1.7
+  - r-futile.logger =1.4.3
+  - r-futile.options =1.0.1
+  - r-generics =0.1.0
   - r-ggplot2=3.3.3
-  - r-glue=1.4.2
-  - r-gtable=0.3.0
-  - r-hms=1.0.0
-  - r-httr=1.4.2
-  - r-hwriter=1.3.2
-  - r-isoband=0.2.3
-  - r-jsonlite=1.7.2
-  - r-labeling=0.4.2
-  - r-lambda.r=1.2.4
-  - r-lattice=0.20_41
-  - r-lifecycle=1.0.0
-  - r-locfit=1.5_9.4
-  - r-magrittr=2.0.1
-  - r-mass=7.3_53.1
-  - r-matrix=1.3_2
-  - r-matrixstats=0.58.0
-  - r-memoise=2.0.0
-  - r-mgcv=1.8_34
-  - r-mime=0.10
-  - r-munsell=0.5.0
-  - r-nlme=3.1_150
-  - r-openssl=1.4.3
-  - r-pillar=1.4.7
-  - r-pkgbuild=1.2.0
-  - r-pkgconfig=2.0.3
-  - r-pkgload=1.1.0
-  - r-plogr=0.2.0
-  - r-plyr=1.8.6
-  - r-praise=1.0.0
-  - r-prettyunits=1.1.1
-  - r-processx=3.4.5
-  - r-progress=1.2.2
-  - r-ps=1.5.0
-  - r-purrr=0.3.4
+  - r-glue =1.4.2
+  - r-gtable =0.3.0
+  - r-hms =1.0.0
+  - r-httr =1.4.2
+  - r-hwriter =1.3.2
+  - r-isoband =0.2.3
+  - r-jsonlite =1.7.2
+  - r-labeling =0.4.2
+  - r-lambda.r =1.2.4
+  - r-lattice =0.20_41
+  - r-lifecycle =1.0.0
+  - r-locfit =1.5_9.4
+  - r-magrittr =2.0.1
+  - r-mass =7.3_53.1
+  - r-matrix =1.3_2
+  - r-matrixstats =0.58.0
+  - r-memoise =2.0.0
+  - r-mgcv =1.8_34
+  - r-mime =0.10
+  - r-munsell =0.5.0
+  - r-nlme =3.1_150
+  - r-openssl =1.4.3
+  - r-pillar =1.4.7
+  - r-pkgbuild =1.2.0
+  - r-pkgconfig =2.0.3
+  - r-pkgload =1.1.0
+  - r-plogr =0.2.0
+  - r-plyr =1.8.6
+  - r-praise =1.0.0
+  - r-prettyunits =1.1.1
+  - r-processx =3.4.5
+  - r-progress =1.2.2
+  - r-ps =1.5.0
+  - r-purrr =0.3.4
   - r-r6=2.5.0
-  - r-rappdirs=0.3.3
-  - r-rcolorbrewer=1.1_2
-  - r-rcpp=1.0.6
-  - r-rcpparmadillo=0.10.2.1.0
-  - r-rcurl=1.98_1.2
+  - r-rappdirs =0.3.3
+  - r-rcolorbrewer =1.1_2
+  - r-rcpp =1.0.6
+  - r-rcpparmadillo =0.10.2.1.0
+  - r-rcurl =1.98_1.2
   - r-rematch2=2.1.2
   - r-reshape2=1.4.4
-  - r-rlang=0.4.10
-  - r-rprojroot=2.0.2
-  - r-rsqlite=2.2.3
-  - r-rstudioapi=0.13
-  - r-scales=1.1.1
-  - r-snow=0.4_3
-  - r-statmod=1.4.35
-  - r-stringi=1.5.3
-  - r-stringr=1.4.0
-  - r-survival=3.2_7
-  - r-sys=3.4
-  - r-testthat=3.0.2
-  - r-tibble=3.0.6
-  - r-tidyselect=1.1.0
+  - r-rlang =0.4.10
+  - r-rprojroot =2.0.2
+  - r-rsqlite =2.2.3
+  - r-rstudioapi =0.13
+  - r-scales =1.1.1
+  - r-snow =0.4_3
+  - r-statmod =1.4.35
+  - r-stringi =1.5.3
+  - r-stringr =1.4.0
+  - r-survival =3.2_7
+  - r-sys =3.4
+  - r-testthat =3.0.2
+  - r-tibble =3.0.6
+  - r-tidyselect =1.1.0
   - r-utf8=1.1.4
-  - r-vctrs=0.3.6
-  - r-viridislite=0.3.0
-  - r-waldo=0.2.4
-  - r-withr=2.4.1
-  - r-xml=3.99_0.5
+  - r-vctrs =0.3.6
+  - r-viridislite =0.3.0
+  - r-waldo =0.2.4
+  - r-withr =2.4.1
+  - r-xml =3.99_0.5
   - r-xml2=1.3.2
-  - r-xtable=1.8_4
-  - r-zeallot=0.1.0
-  - readline=8.2
-  - sed=4.8
+  - r-xtable =1.8_4
+  - r-zeallot =0.1.0
+  - readline =8.2
+  - sed =4.8
