--- a/envs/edger_DEU.yaml
+++ b/envs/edger_DEU.yaml
@@ -4,56 +4,56 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - bioconductor-biobase=2.46.0
-  - bioconductor-biocgenerics=0.32.0
-  - bioconductor-biocparallel=1.20.0
-  - bioconductor-biostrings=2.54.0
-  - bioconductor-delayedarray=0.12.0
-  - bioconductor-edger=3.28.0
-  - bioconductor-genomeinfodb=1.22.0
-  - bioconductor-genomeinfodbdata=1.2.2
-  - bioconductor-genomicalignments=1.22.0
-  - bioconductor-genomicranges=1.38.0
-  - bioconductor-iranges=2.20.0
-  - bioconductor-limma=3.42.0
-  - bioconductor-rhtslib=1.18.0
-  - bioconductor-rsamtools=2.2.0
-  - bioconductor-rtracklayer=1.46.0
-  - bioconductor-s4vectors=0.24.0
-  - bioconductor-summarizedexperiment=1.16.0
-  - bioconductor-xvector=0.26.0
-  - bioconductor-zlibbioc=1.32.0
-  - r-assertthat=0.2.1
-  - r-base=3.6.2
-  - r-bh=1.69.0_1
-  - r-bitops=1.0_6
-  - r-cli=1.1.0
-  - r-crayon=1.3.4
-  - r-dplyr=0.8.0.1
-  - r-fansi=0.4.0
-  - r-formatr=1.7
-  - r-futile.logger=1.4.3
-  - r-futile.options=1.0.1
-  - r-glue=1.3.1
-  - r-lambda.r=1.2.4
-  - r-lattice=0.20_38
-  - r-locfit=1.5_9.1
-  - r-magrittr=1.5
-  - r-matrix=1.2_18
-  - r-matrixstats=0.57.0
-  - r-pillar=1.3.1
-  - r-pkgconfig=2.0.2
-  - r-plogr=0.2.0
-  - r-purrr=0.3.2
+  - bioconductor-biobase =2.46.0
+  - bioconductor-biocgenerics =0.32.0
+  - bioconductor-biocparallel =1.20.0
+  - bioconductor-biostrings =2.54.0
+  - bioconductor-delayedarray =0.12.0
+  - bioconductor-edger =3.28.0
+  - bioconductor-genomeinfodb =1.22.0
+  - bioconductor-genomeinfodbdata =1.2.2
+  - bioconductor-genomicalignments =1.22.0
+  - bioconductor-genomicranges =1.38.0
+  - bioconductor-iranges =2.20.0
+  - bioconductor-limma =3.42.0
+  - bioconductor-rhtslib =1.18.0
+  - bioconductor-rsamtools =2.2.0
+  - bioconductor-rtracklayer =1.46.0
+  - bioconductor-s4vectors =0.24.0
+  - bioconductor-summarizedexperiment =1.16.0
+  - bioconductor-xvector =0.26.0
+  - bioconductor-zlibbioc =1.32.0
+  - r-assertthat =0.2.1
+  - r-base =3.6.2
+  - r-bh =1.69.0_1
+  - r-bitops =1.0_6
+  - r-cli =1.1.0
+  - r-crayon =1.3.4
+  - r-dplyr =0.8.0.1
+  - r-fansi =0.4.0
+  - r-formatr =1.7
+  - r-futile.logger =1.4.3
+  - r-futile.options =1.0.1
+  - r-glue =1.3.1
+  - r-lambda.r =1.2.4
+  - r-lattice =0.20_38
+  - r-locfit =1.5_9.1
+  - r-magrittr =1.5
+  - r-matrix =1.2_18
+  - r-matrixstats =0.57.0
+  - r-pillar =1.3.1
+  - r-pkgconfig =2.0.2
+  - r-plogr =0.2.0
+  - r-purrr =0.3.2
   - r-r6=2.4.0
-  - r-rcpp=1.0.3
-  - r-rcurl=1.98_1.1
-  - r-rlang=0.3.4
-  - r-snow=0.4_3
-  - r-statmod=1.4.33
-  - r-tibble=2.1.1
-  - r-tidyselect=0.2.5
+  - r-rcpp =1.0.3
+  - r-rcurl =1.98_1.1
+  - r-rlang =0.3.4
+  - r-snow =0.4_3
+  - r-statmod =1.4.33
+  - r-tibble =2.1.1
+  - r-tidyselect =0.2.5
   - r-utf8=1.1.4
-  - r-xml=3.99_0.3
-  - readline=8.2
-  - sed=4.7
+  - r-xml =3.99_0.3
+  - readline =8.2
+  - sed =4.7
