--- a/envs/isoformswitchanalyzer.yaml
+++ b/envs/isoformswitchanalyzer.yaml
@@ -5,130 +5,130 @@ channels:
   - defaults
   - r
 dependencies:
-  - bioconductor-annotate=1.66.0
-  - bioconductor-annotationdbi=1.50.0
-  - bioconductor-biobase=2.48.0
-  - bioconductor-biocfilecache=1.12.0
-  - bioconductor-biocgenerics=0.34.0
-  - bioconductor-biocparallel=1.22.0
-  - bioconductor-biomart=2.44.0
-  - bioconductor-biostrings=2.56.0
-  - bioconductor-bsgenome=1.56.0
-  - bioconductor-delayedarray=0.14.0
+  - bioconductor-annotate =1.66.0
+  - bioconductor-annotationdbi =1.50.0
+  - bioconductor-biobase =2.48.0
+  - bioconductor-biocfilecache =1.12.0
+  - bioconductor-biocgenerics =0.34.0
+  - bioconductor-biocparallel =1.22.0
+  - bioconductor-biomart =2.44.0
+  - bioconductor-biostrings =2.56.0
+  - bioconductor-bsgenome =1.56.0
+  - bioconductor-delayedarray =0.14.0
   - bioconductor-deseq2=1.28.0
-  - bioconductor-dexseq=1.34.0
-  - bioconductor-drimseq=1.16.0
-  - bioconductor-edger=3.30.0
-  - bioconductor-genefilter=1.70.0
-  - bioconductor-geneplotter=1.66.0
-  - bioconductor-genomeinfodb=1.24.0
-  - bioconductor-genomeinfodbdata=1.2.3
-  - bioconductor-genomicalignments=1.24.0
-  - bioconductor-genomicranges=1.40.0
-  - bioconductor-iranges=2.22.1
-  - bioconductor-isoformswitchanalyzer=1.10.0
-  - bioconductor-limma=3.44.1
-  - bioconductor-rhtslib=1.20.0
-  - bioconductor-rsamtools=2.4.0
-  - bioconductor-rtracklayer=1.48.0
-  - bioconductor-s4vectors=0.26.0
-  - bioconductor-summarizedexperiment=1.18.1
-  - bioconductor-tximport=1.16.0
-  - bioconductor-xvector=0.28.0
-  - bioconductor-zlibbioc=1.34.0
-  - r-askpass=1.1
-  - r-assertthat=0.2.1
-  - r-backports=1.1.8
-  - r-base=4.0.2
-  - r-bh=1.72.0_3
-  - r-bit=4.0.4
+  - bioconductor-dexseq =1.34.0
+  - bioconductor-drimseq =1.16.0
+  - bioconductor-edger =3.30.0
+  - bioconductor-genefilter =1.70.0
+  - bioconductor-geneplotter =1.66.0
+  - bioconductor-genomeinfodb =1.24.0
+  - bioconductor-genomeinfodbdata =1.2.3
+  - bioconductor-genomicalignments =1.24.0
+  - bioconductor-genomicranges =1.40.0
+  - bioconductor-iranges =2.22.1
+  - bioconductor-isoformswitchanalyzer =1.10.0
+  - bioconductor-limma =3.44.1
+  - bioconductor-rhtslib =1.20.0
+  - bioconductor-rsamtools =2.4.0
+  - bioconductor-rtracklayer =1.48.0
+  - bioconductor-s4vectors =0.26.0
+  - bioconductor-summarizedexperiment =1.18.1
+  - bioconductor-tximport =1.16.0
+  - bioconductor-xvector =0.28.0
+  - bioconductor-zlibbioc =1.34.0
+  - r-askpass =1.1
+  - r-assertthat =0.2.1
+  - r-backports =1.1.8
+  - r-base =4.0.2
+  - r-bh =1.72.0_3
+  - r-bit =4.0.4
   - r-bit64=4.0.2
-  - r-bitops=1.0_6
-  - r-blob=1.2.1
-  - r-callr=3.4.3
-  - r-cli=2.0.2
-  - r-clipr=0.7.0
-  - r-colorspace=1.4_1
-  - r-crayon=1.3.4
-  - r-curl=4.3
-  - r-dbi=1.1.0
-  - r-dbplyr=1.4.4
-  - r-desc=1.2.0
-  - r-digest=0.6.25
-  - r-dplyr=1.0.2
-  - r-ellipsis=0.3.1
-  - r-evaluate=0.14
-  - r-fansi=0.4.1
-  - r-farver=2.0.3
-  - r-formatr=1.7
-  - r-futile.logger=1.4.3
-  - r-futile.options=1.0.1
-  - r-generics=0.0.2
+  - r-bitops =1.0_6
+  - r-blob =1.2.1
+  - r-callr =3.4.3
+  - r-cli =2.0.2
+  - r-clipr =0.7.0
+  - r-colorspace =1.4_1
+  - r-crayon =1.3.4
+  - r-curl =4.3
+  - r-dbi =1.1.0
+  - r-dbplyr =1.4.4
+  - r-desc =1.2.0
+  - r-digest =0.6.25
+  - r-dplyr =1.0.2
+  - r-ellipsis =0.3.1
+  - r-evaluate =0.14
+  - r-fansi =0.4.1
+  - r-farver =2.0.3
+  - r-formatr =1.7
+  - r-futile.logger =1.4.3
+  - r-futile.options =1.0.1
+  - r-generics =0.0.2
   - r-ggplot2=3.3.2
-  - r-glue=1.4.1
-  - r-gridextra=2.3
-  - r-gtable=0.3.0
-  - r-hms=0.5.3
-  - r-httr=1.4.2
-  - r-hwriter=1.3.2
-  - r-isoband=0.2.2
-  - r-jsonlite=1.7.0
-  - r-labeling=0.3
-  - r-lambda.r=1.2.4
-  - r-lattice=0.20_41
-  - r-lifecycle=0.2.0
-  - r-locfit=1.5_9.4
-  - r-magrittr=1.5
-  - r-mass=7.3_52
-  - r-matrix=1.2_18
-  - r-matrixstats=0.56.0
-  - r-memoise=1.1.0
-  - r-mgcv=1.8_32
-  - r-mime=0.9
-  - r-munsell=0.5.0
-  - r-nlme=3.1_149
-  - r-openssl=1.4.2
-  - r-pillar=1.4.6
-  - r-pkgbuild=1.1.0
-  - r-pkgconfig=2.0.3
-  - r-pkgload=1.1.0
-  - r-plogr=0.2.0
-  - r-plyr=1.8.6
-  - r-praise=1.0.0
-  - r-prettyunits=1.1.1
-  - r-processx=3.4.3
-  - r-progress=1.2.2
-  - r-ps=1.3.4
-  - r-purrr=0.3.4
+  - r-glue =1.4.1
+  - r-gridextra =2.3
+  - r-gtable =0.3.0
+  - r-hms =0.5.3
+  - r-httr =1.4.2
+  - r-hwriter =1.3.2
+  - r-isoband =0.2.2
+  - r-jsonlite =1.7.0
+  - r-labeling =0.3
+  - r-lambda.r =1.2.4
+  - r-lattice =0.20_41
+  - r-lifecycle =0.2.0
+  - r-locfit =1.5_9.4
+  - r-magrittr =1.5
+  - r-mass =7.3_52
+  - r-matrix =1.2_18
+  - r-matrixstats =0.56.0
+  - r-memoise =1.1.0
+  - r-mgcv =1.8_32
+  - r-mime =0.9
+  - r-munsell =0.5.0
+  - r-nlme =3.1_149
+  - r-openssl =1.4.2
+  - r-pillar =1.4.6
+  - r-pkgbuild =1.1.0
+  - r-pkgconfig =2.0.3
+  - r-pkgload =1.1.0
+  - r-plogr =0.2.0
+  - r-plyr =1.8.6
+  - r-praise =1.0.0
+  - r-prettyunits =1.1.1
+  - r-processx =3.4.3
+  - r-progress =1.2.2
+  - r-ps =1.3.4
+  - r-purrr =0.3.4
   - r-r6=2.4.1
-  - r-rappdirs=0.3.1
-  - r-rcolorbrewer=1.1_2
-  - r-rcpp=1.0.4.6
-  - r-rcpparmadillo=0.9.900.2.0
-  - r-rcurl=1.98_1.2
-  - r-readr=1.3.1
+  - r-rappdirs =0.3.1
+  - r-rcolorbrewer =1.1_2
+  - r-rcpp =1.0.4.6
+  - r-rcpparmadillo =0.9.900.2.0
+  - r-rcurl =1.98_1.2
+  - r-readr =1.3.1
   - r-reshape2=1.4.4
-  - r-rlang=0.4.7
-  - r-rprojroot=1.3_2
-  - r-rsqlite=2.2.0
-  - r-rstudioapi=0.11
-  - r-scales=1.1.1
-  - r-snow=0.4_3
-  - r-statmod=1.4.34
-  - r-stringi=1.4.6
-  - r-stringr=1.4.0
-  - r-survival=3.2_3
-  - r-sys=3.4
-  - r-testthat=2.3.2
-  - r-tibble=3.0.3
-  - r-tidyselect=1.1.0
+  - r-rlang =0.4.7
+  - r-rprojroot =1.3_2
+  - r-rsqlite =2.2.0
+  - r-rstudioapi =0.11
+  - r-scales =1.1.1
+  - r-snow =0.4_3
+  - r-statmod =1.4.34
+  - r-stringi =1.4.6
+  - r-stringr =1.4.0
+  - r-survival =3.2_3
+  - r-sys =3.4
+  - r-testthat =2.3.2
+  - r-tibble =3.0.3
+  - r-tidyselect =1.1.0
   - r-utf8=1.1.4
-  - r-vctrs=0.3.2
-  - r-venndiagram=1.6.20
-  - r-viridislite=0.3.0
-  - r-withr=2.2.0
-  - r-xml=3.99_0.3
-  - r-xtable=1.8_4
-  - r-zeallot=0.1.0
-  - readline=8.2
-  - sed=4.8
+  - r-vctrs =0.3.2
+  - r-venndiagram =1.6.20
+  - r-viridislite =0.3.0
+  - r-withr =2.2.0
+  - r-xml =3.99_0.3
+  - r-xtable =1.8_4
+  - r-zeallot =0.1.0
+  - readline =8.2
+  - sed =4.8
