--- a/envs/scyphy.yaml
+++ b/envs/scyphy.yaml
@@ -6,8 +6,9 @@ channels:
   - r
 dependencies:
   - bzip2=1.0.8
-  - piranha=1.2.1
-  - pyfaidx=0.7.1
-  - pysam=0.20.0
-  - readline=8.2
-  - samtools=1.16.1
+  - piranha =1.2.1
+  - pyfaidx =0.7.1
+  - pysam =0.19.1
+  - python =3.9
+  - readline =8.2
+  - samtools =1.16.1
