tee logging cleanup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,8 @@
         "MAXTHREADS",
         "subdir",
         "unstranded"
+    ],
+    "cSpell.enableFiletypes": [
+        "snakemake"
     ]
 }
