--- a/envs/dexseq_DEU.yaml
+++ b/envs/dexseq_DEU.yaml
@@ -1,11 +1,11 @@
-name: dexseq_DEU
+name: testdexseq
 channels:
-  - bioconda
   - conda-forge
+  - bioconda
   - defaults
   - r
 dependencies:
-  - bcftools =1.16
+  - bcftools=1.16
   - bioconductor-annotate=1.76.0
   - bioconductor-annotationdbi=1.60.0
   - bioconductor-biobase=2.58.0
@@ -15,13 +15,13 @@ dependencies:
   - bioconductor-biocparallel=1.32.5
   - bioconductor-biomart=2.54.0
   - bioconductor-biostrings=2.66.0
-  - bioconductor-data-packages=20221112
+  - bioconductor-data-packages=20230202
   - bioconductor-delayedarray=0.24.0
-  - bioconductor-deseq2 =1.38.0
+  - bioconductor-deseq2=1.38.0
   - bioconductor-dexseq=1.44.0
   - bioconductor-genefilter=1.80.0
   - bioconductor-geneplotter=1.76.0
-  - bioconductor-genomeinfodb=1.34.1
+  - bioconductor-genomeinfodb=1.34.8
   - bioconductor-genomeinfodbdata=1.2.9
   - bioconductor-genomicalignments=1.34.0
   - bioconductor-genomicranges=1.50.0
@@ -35,48 +35,47 @@ dependencies:
   - bioconductor-summarizedexperiment=1.28.0
   - bioconductor-xvector=0.38.0
   - bioconductor-zlibbioc=1.44.0
-  - bwidget =1.9.14
-  - bzip2 =1.0.8
-  - htseq =2.0.2
-  - htslib =1.16
-  - matplotlib=3.6.3
-  - matplotlib-base=3.6.3
-  - numpy =1.24.1
-  - pysam =0.20.0
-  - python =3.10.8
-  - python-dateutil =2.8.2
+  - htseq=2.0.2
+  - htslib=1.16
+  - matplotlib=3.7.0
+  - matplotlib-base=3.7.0
+  - numpy=1.24.2
+  - perl=5.32.1
+  - python=3.10.8
+  - python-dateutil=2.8.2
+  - python_abi=3.10
   - pyyaml=6.0
   - r-askpass=1.1
   - r-assertthat=0.2.1
   - r-base=4.2.2
-  - r-bh=1.78.0_0
+  - r-bh=1.81.0_1
   - r-bit=4.0.5
-  - r-bit64 =4.0.5
+  - r-bit64=4.0.5
   - r-bitops=1.0_7
   - r-blob=1.2.3
   - r-cachem=1.0.6
   - r-cli=3.6.0
-  - r-codetools=0.2_18
-  - r-colorspace=2.0_3
+  - r-codetools=0.2_19
+  - r-colorspace=2.1_0
   - r-commonmark=1.8.1
-  - r-cpp11 =0.4.3
+  - r-cpp11=0.4.3
   - r-crayon=1.5.2
   - r-curl=4.3.3
   - r-dbi=1.1.3
-  - r-dbplyr=2.2.1
+  - r-dbplyr=2.3.0
   - r-digest=0.6.31
-  - r-dplyr=1.0.10
+  - r-dplyr=1.1.0
   - r-ellipsis=0.3.2
-  - r-evaluate=0.19
-  - r-fansi=1.0.3
+  - r-evaluate=0.20
+  - r-fansi=1.0.4
   - r-farver=2.1.1
   - r-fastmap=1.1.0
   - r-filelock=1.0.2
-  - r-formatr=1.13
+  - r-formatr=1.14
   - r-futile.logger=1.4.3
   - r-futile.options=1.0.1
   - r-generics=0.1.3
-  - r-ggplot2 =3.4.0
+  - r-ggplot2=3.4.1
   - r-glue=1.6.2
   - r-gtable=0.3.1
   - r-highr=0.10
@@ -85,22 +84,22 @@ dependencies:
   - r-hwriter=1.3.2.1
   - r-isoband=0.2.7
   - r-jsonlite=1.8.4
-  - r-knitr=1.41
+  - r-knitr=1.42
   - r-labeling=0.4.2
   - r-lambda.r=1.2.4
   - r-lattice=0.20_45
   - r-lifecycle=1.0.3
   - r-locfit=1.5_9.7
   - r-magrittr=2.0.3
-  - r-markdown=1.4
-  - r-mass=7.3_58.1
+  - r-markdown=1.5
+  - r-mass=7.3_58.2
   - r-matrix=1.5_3
   - r-matrixstats=0.63.0
   - r-memoise=2.0.1
   - r-mgcv=1.8_41
   - r-mime=0.12
   - r-munsell=0.5.0
-  - r-nlme=3.1_161
+  - r-nlme=3.1_162
   - r-openssl=2.0.5
   - r-pillar=1.8.1
   - r-pkgconfig=2.0.3
@@ -110,12 +109,12 @@ dependencies:
   - r-prettyunits=1.1.1
   - r-progress=1.2.2
   - r-purrr=1.0.1
-  - r-r6 =2.5.1
+  - r-r6=2.5.1
   - r-rappdirs=0.3.3
   - r-rcolorbrewer=1.1_3
-  - r-rcpp=1.0.9
-  - r-rcpparmadillo=0.11.4.3.1
-  - r-rcurl=1.98_1.9
+  - r-rcpp=1.0.10
+  - r-rcpparmadillo=0.11.4.4.0
+  - r-rcurl=1.98_1.10
   - r-restfulr=0.0.15
   - r-rjson=0.2.21
   - r-rlang=1.0.6
@@ -125,19 +124,20 @@ dependencies:
   - r-statmod=1.5.0
   - r-stringi=1.7.12
   - r-stringr=1.5.0
-  - r-survival=3.5_0
+  - r-survival=3.5_3
   - r-sys=3.4.1
   - r-tibble=3.1.8
   - r-tidyselect=1.2.0
-  - r-utf8 =1.2.2
-  - r-vctrs=0.5.1
+  - r-utf8=1.2.3
+  - r-vctrs=0.5.2
   - r-viridislite=0.4.1
   - r-withr=2.5.0
-  - r-xfun=0.36
+  - r-xfun=0.37
   - r-xml=3.99_0.13
-  - r-xml2 =1.3.3
+  - r-xml2=1.3.3
   - r-xtable=1.8_4
-  - r-yaml=2.3.6
-  - readline=8.2
+  - r-yaml=2.3.7
+  - readline=8.1.2
   - samtools=1.16.1
   - sed=4.8
+  - yaml=0.2.5
