--- a/envs/monsda.yaml
+++ b/envs/monsda.yaml
@@ -13,11 +13,11 @@ dependencies:
   - natsort >=8.1.0
   - nextflow =23.04.1
   - perl =5.32.1
-  - python =3.10.6
-  - python_abi =3.10
-  - python-dateutil =2.8.2
-  - python-fastjsonschema =2.15.3
-  - python-irodsclient =1.1.3
+  - python =3.11.0
+  - python_abi =3.11
+  - python-dateutil >=2.8.2
+  - python-fastjsonschema >=2.15.3
+  - python-irodsclient >=1.1.3
   - pyopenssl >=22.0
-  - pyyaml =6.0
-  - snakemake-minimal =7.28.2
+  - pyyaml >=6.0
+  - snakemake =7.28.3
