--- a/envs/base.yaml
+++ b/envs/base.yaml
@@ -1,17 +1,18 @@
-name: snakemake
+name: base
 channels:
   - conda-forge
   - bioconda
   - defaults
 dependencies:
-  - grep =3.4
+  - grep >=3.4
   - samtools =1.16.1
   - snakemake =7.29.0
-  - natsort =8.1.0
-  - perl =5.26.2
+  - natsort >=8.1.0
+  - perl =5.32.1
   - picard =2.27.4
   - pigz =2.6
-  - python =3.10.0
+  - python =3.10.4
   - python_abi =3.10
   - pyfaidx =0.5.9
   - pysam =0.20.0
+  - toposort >=1.10
