--- a/envs/monsda.yaml
+++ b/envs/monsda.yaml
@@ -11,13 +11,12 @@ dependencies:
   - mamba >=1.0.0
   - more-itertools >=8.12.0
   - natsort >=8.1.0
-  - nextflow =23.04.1
-  - perl =5.32.1
-  - python =3.11.4
-  - python_abi =3.11
+  - nextflow >=23.04.1
+  - perl >=5.32.1
+  - python >=3.11
   - python-dateutil >=2.8.2
   - python-fastjsonschema >=2.15.3
   - python-irodsclient >=1.1.3
   - pyopenssl >=22.0
   - pyyaml >=6.0
-  - snakemake =7.32.3
+  - snakemake >=7.32.3
