--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ Issues = "https://github.com/jfallmann/MONSDA/issues"
 build-backend = "setuptools.build_meta"
 requires = [
   "setuptools>=42",
-  'tomli; python_version > "3.12"',
+  'tomli; python_version >= "3.12.0"',
   "biopython>=1.78",
   "snakemake>=8.9.0",
   "black>=21.5b2",
