--- a/envs/monsda.yaml
+++ b/envs/monsda.yaml
@@ -3,19 +3,24 @@ channels:
   - conda-forge
   - bioconda
   - defaults
-  - r
 dependencies:
-  - conda-libmamba-solver >=23.5.0
+  - biopython=1.83
   - grep >=3.4
-  - isort >=5.10.1
-  - more-itertools >=8.12.0
-  - natsort >=8.1.0
-  - nextflow >=23.04.1
-  - perl >=5.32.1
-  - python >=3.11
-  - python-dateutil >=2.8.2
-  - python-fastjsonschema >=2.15.3
-  - python-irodsclient >=1.1.3
-  - pyopenssl >=22.0
-  - pyyaml >=6.0
-  - snakemake >=7.32.3
+  - isort=5.13.2
+  - monsda=1.2.3
+  - natsort=8.4.0
+  - nextflow=23.10.1
+  - numpy=1.26.4
+  - pandas=2.2.1
+  - perl=5.34.0
+  - pip>=24.0
+  - python=3.12.2
+  - pyyaml=6.0.1
+  - scipy=1.12.0
+  - snakemake=8.9.0
+  - snakemake-executor-plugin-slurm=0.4.2
+  - snakemake-interface-common=1.17.1
+  - snakemake-interface-executor-plugins=9.0.0
+  - snakemake-interface-report-plugins=1.0.0
+  - snakemake-interface-storage-plugins=3.1.1
+  - snakemake-storage-plugin-s3=0.2.10
