--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,6 +5,17 @@
 # Required
 version: 2
 
+# Set the OS, Python version and other tools you might need
+
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.12"
+    # You can also specify other tool versions:
+    # nodejs: "20"
+    # rust: "1.70"
+    # golang: "1.20"
+
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
   configuration: docs/conf.py
@@ -18,7 +29,7 @@ formats: [htmlzip, epub]
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
-  version: 3.8
+  version: 3.12
   install:
     - requirements: docs/requirements.txt
 
