--- a/envs/edger_DE.yaml
+++ b/envs/edger_DE.yaml
@@ -33,6 +33,7 @@ dependencies:
   - bioconductor-s4vectors =0.26.0
   - bioconductor-shortread =1.46.0
   - bioconductor-summarizedexperiment =1.18.1
+  - bioconductor-enhancedvolcano =1.20.0
   - bioconductor-xvector =0.28.0
   - bioconductor-zlibbioc =1.34.0
   - r-askpass =1.1
