--- a/envs/dexseq_DTU.yaml
+++ b/envs/dexseq_DTU.yaml
@@ -2,7 +2,7 @@ name: dexseq
 channels:
   - conda-forge
   - bioconda
-  - defaults
+  - nodefaults
   - r
 dependencies:
   - bioconductor-annotate =1.76.0
