--- a/envs/base.yaml
+++ b/envs/base.yaml
@@ -2,7 +2,7 @@ name: base
 channels:
   - conda-forge
   - bioconda
-  - defaults
+  - nodefaults
 dependencies:
   - grep >=3.4
   - samtools =1.16.1
