--- a/envs/deseq2_DE.yaml
+++ b/envs/deseq2_DE.yaml
@@ -2,7 +2,7 @@ name: deseq2
 channels:
   - conda-forge
   - bioconda
-  - defaults
+  - nodefaults
 dependencies:
   - bioconductor-annotate =1.70.0
   - bioconductor-annotationdbi =1.54.0
