--- a/envs/edger_DE.yaml
+++ b/envs/edger_DE.yaml
@@ -2,7 +2,7 @@ name: edger_DE
 channels:
   - bioconda
   - conda-forge
-  - defaults
+  - nodefaults
 dependencies:
   - bioconductor-annotate =1.70.0
   - bioconductor-annotationdbi =1.54.0
