--- a/envs/trnascan.yaml
+++ b/envs/trnascan.yaml
@@ -3,7 +3,7 @@ channels:
   - bioconda
   - conda-forge
   - r
-  - defaults
+  - nodefaults
 dependencies:
   - infernal =1.1.2
   - trnascan-se =2.0
