nf config update, containers working

--- a/profile_nextflow/nextflow.config
+++ b/profile_nextflow/nextflow.config
@@ -11,4 +11,17 @@ profiles {
   local {
     process.executor = 'local'
   }
+
+  apptainer {
+    conda.enabled           = true 
+    apptainer.enabled       = true
+    apptainer.autoMounts    = true
+    docker.enabled          = false
+    process {
+        withName: '_idx|_map' {
+            memory = '160GB'
+        }
+        beforeScript = 'source ~/anaconda3/etc/profile.d/conda.sh; conda activate apptainer; export PATH=${PATH}:${CONDA_PREFIX}/bin'
+    }
+  }
 }
